assets/styles/media.css
@media screen and (max-width: 800px) {
    .main-banner {
        flex-direction: column-reverse;
    }
    .main-banner-picture {
        width: 70%;
        margin: 0;
    }
    .navbar-link {
        display: none;
    }
    .menu-toggle {
        display: block;
    }
    .main-section {
        padding: 0 20px 40px 20px;
    }
    .navbar-items-left {
        margin: 0 20px;
    }
    
    .navbar-items-right {
        margin: 0 20px;
    }
    .main-banner-title {
        margin: 20px;
    }
    .main-banner-picture {
        margin: 0 20px;
    }
}

@media screen and (min-width: 801px) {
    .menu {
        display: none;
    }
    .menu-collapser {
        display: none;
    }
    body.active {
        overflow: auto;
    }
}

@media (prefers-color-scheme: dark) {
    * {
        --background: #000000;
        --text: #dddddd;
        --accent: #3080ff;
        --background-alt: #252525;
        --background-alt2: #252525;
        --background-alt3: #161616;
        --transparent-bg: rgba(0,0,0,0.8);
    }
    img {
        filter: brightness(0.85);
    }
    .repo-list-item {
        background-color: var(--background-alt3);
        box-shadow: none;
    }
}

